gccida/g3/copy_constant
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3606:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3611:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3612:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3665:3: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
( tree_code)*( ( unsigned __int8 *)&exp->block.common + 16), 
  ^~~~~~~~~
  tree_cons
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3665:13: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
( tree_code)*( ( unsigned __int8 *)&exp->block.common + 16), 
~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3695:18: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
return build1( ( tree_code)*( ( unsigned __int8 *)&exp->block.common + 16), exp->common.type, v5); 
                 ^~~~~~~~~
                 tree_cons
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/varasm.c:3695:28: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
return build1( ( tree_code)*( ( unsigned __int8 *)&exp->block.common + 16), exp->common.type, v5); 
               ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_constant/src/obj/varasm.o] Error 1
